Fontes globais atualizadas

--- a/src/global.scss
+++ b/src/global.scss
@@ -16,3 +16,8 @@ $danger: #e25858;
 
 // fontes
 $regular-1: 400 0.75rem/1.4 'Inter', sans-serif;
+$bold-1: 700 0.75rem/1.4 'Inter', sans-serif;
+$regular-2: 400 0.875rem/1.4 'Inter', sans-serif;
+$bold-2: 700 0.875rem/1.4 'Inter', sans-serif;
+$regular-3: 400 1rem/1.4 'Inter', sans-serif;
+$bold-3: 700 1rem/1.4 'Inter', sans-serif;
