Pequenas alterçaões de estilo

--- a/src/components/tasks/tasks.scss
+++ b/src/components/tasks/tasks.scss
@@ -89,6 +89,10 @@
       padding: 16px;
       border-radius: 8px;
       height: 72px;
+
+      .icon {
+        cursor: pointer;
+      }
     }
   }
 }
