Pequenas mudanças no estilo do icon

--- a/src/components/tasks/tasks.scss
+++ b/src/components/tasks/tasks.scss
@@ -92,6 +92,13 @@
 
       .icon {
         cursor: pointer;
+        width: 14px;
+        height: 14px;
+
+        &:hover {
+          color: $danger;
+          background-color: $gray-400;
+        }
       }
     }
   }
