Alteração na margem

--- a/src/components/tasks/tasks.scss
+++ b/src/components/tasks/tasks.scss
@@ -53,6 +53,7 @@
     padding: 5rem 0;
     border-top: 1px solid $gray-300;
     gap: .5rem;
+    margin-top: 1.75rem;
 
     img {
       margin-bottom: 1rem;
